# Moon

./: CMakeLists.txt  Moon_icon.qrc  Pitch.md  README.md  ReadMe.md  aftwindow.cpp  aftwindow.h  aftwindow.ui  loginwindows.cpp  loginwindows.h  loginwindows.ui  main.cpp
Client+logins/: CMakeLists.txt  aftwindow.cpp  aftwindow.h  aftwindow.ui  connect.cpp  connect.h  homechats.cpp  homechats.h  homechats.ui  loginwindows.cpp  loginwindows.h  loginwindows.ui  main.cpp  utils.h
Document/: Pitch.md  Техническое_задание.md  Траектория.md
Server/: CMakeLists.txt  database.cpp  database.h  main.cpp  server.cpp  server.h
